Revision history for Dist-Mgr

1.13 UNREL
    -

1.12    2022-05-10
    - In the copyright update tests, test year dynamically instead of
      using the magic number (fixes #51)
    - Switched all Github access from HTTP to SSH
    - Added template data for the t/data/distmgr/* tests
    - Cleaned up deployed MANIFEST.SKIP file
    - Enhanced file comparison tests with line numbers and full paths
    - Changed the module CI badges and CI test config file to use 'main' branch
      instead of 'master' (per changes at Github) (fixes #53)

1.10    2021-11-14
    - Remove -w|--wait flag from 'distmgr cycle' docs (fixes #46)
    - Fix broken links to distmgr POD from module POD (fixes #44)
    - Removed conditionals in distmgr install which was preventing elements
      from being installed correctly

1.09    2021-02-03
    - Skip failing tests on Windows due to line-ending issues when
      uploaded to CPAN. Windows CI tests pass just fine
    - Fix issue where in "install", we were exiting prematurely

1.07    2021-02-02
    - For some reason, CPAN installs were breaking due to an unknown reason
      on Windows. After a dev release, the problem seems resolved
    - Updated _dist_dir_re() so it includes development versions

1.06_01    2021-02-02
    - In _git_release(), put output of _git_status_differs() into variable,
      otherwise the second check for CI has already been set to false after the
      previous commit/push

1.06    2021-01-15
    - Bump prereq version of File::Copy::Recursive, as older versions of perl
      came with v0.38 which didn't export rmove_glob(), which would cause tests
      to fail. We now require v0.45
    - Added _dist_dir_re(), contains the distribution's directory for using in
      testing to confirm we're in the proper location in the file system. Some
      CPAN testers use varying dir names, so tests were failing
    - v1.06 RC1

1.05    2021-01-13
    - Change -x to -w in distmgr POD