@@ -11,22 +11,27 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        perl: [ '5.32', '5.24', '5.18', '5.14', '5.10' ]
+        perl: [ '5.34', '5.32', '5.28', '5.24', '5.18', '5.14' ]
         include:
           - perl: '5.32'
             os: ubuntu-latest
             coverage: true
     name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up perl
         uses: shogo82148/actions-setup-perl@v1
         with:
           perl-version: ${{ matrix.perl }}
-      - run: perl -V
-      - run: cpanm ExtUtils::PL2Bat
-      - run: cpanm ExtUtils::MakeMaker
-      - run: cpanm --installdeps .
+      - name: Perl version
+        run: perl -V
+      - name: Set up Windows
+        if: matrix.os != 'windows-latest'
+        run: cpanm ExtUtils::PL2Bat
+      - name: Install prereqs
+        run: |
+         cpanm ExtUtils::MakeMaker
+         cpanm --installdeps .
       - name: Run tests (no coverage)
         if: ${{ !matrix.coverage }}
         run: prove -lv t
